fix some mistake of position and z-index

--- a/style.css
+++ b/style.css
@@ -8,35 +8,23 @@ body{
     margin: 0;
     padding: 0;
     font-size: 16px;
+    position: relative;
 }
 
-/****** HEADER (start) ******/
 
-header{
-    position: sticky;
-    top: 0;
-    color: white;
-    z-index: 0;
-}
 
-header .navbar{
-    background-color: rgba(0, 0, 0, 0.1);
-    position: absolute;
+
+
+/****** NAVBAR (start) ******/
+
+.navbar{
+    /* background-color: rgba(0, 0, 0, 0.3); */
+    background-color: rgba(151, 133, 74, 0.3);
+    position: fixed;
     top:0;
     left: 0;
     right: 0;
-    z-index: 1;
-}
-
-.logo{
-    width: 4rem;
-    height: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.logo img{
-    width: 100%;
+    z-index: 999;
 }
 
 .offcanvas{
@@ -47,12 +35,43 @@ header .navbar{
     color: white !important;
 }
 
+.logo{
+    width: 4rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.logo img{
+    width: 100%;
+}
+
+/****** NAVBAR (end) ******/
+
+
+
+
+
+/****** HEADER (start) ******/
+
+header{
+    position: sticky;
+    top: 0;
+    color: white;
+    /* z-index: 0; */
+}
 
 #intro_video {
     z-index: -1;
     object-fit: cover;
     width: 100%;
+}
+
+.hide_video {
+    /*js , hide video if scroll window up*/
+    opacity: 0.3;
+    transition: 1s ease-in-out;
 }
 
 .header-content{
@@ -84,16 +103,11 @@ header .navbar{
 
 /****** MAIN (start) ******/
 main{
-    position: relative;
+    /* z-index: 2; */
+    position: relative; /*again position:sticky of header*/
     margin-top: 3vw;
     background-color: white;
-    box-shadow: 0px -20px 10px -10px white;
-}
-
-.hide_video {
-    /*js , hide video if scroll window up*/
-    opacity: 0.3;
-    transition: 1s ease-in-out;
+    box-shadow: 0px -10px 10px 10px white;
 }
 
 section{
@@ -121,7 +135,6 @@ section p{
     text-align: center;
 }
 
-
 iframe{
     width: 100%;
 }
@@ -133,11 +146,14 @@ iframe{
 
 /****** FOOTER (start) ******/
 footer{
-    background-color: rgba(0, 0, 0, 0.4);
+    /* background-color: rgba(0, 0, 0, 0.4); */
+    /* background-color: #4C361E; */
+    background-color: rgba(151, 133, 74, 1);
     color: white;
     margin: 0;
-    padding: 0;
+    padding: 1rem;
     height: fit-content;
+    position: relative; /*again position:sticky of header*/
 }
 /****** FOOTER (end) ******/
 
